@@ -16,6 +16,10 @@ Major changes since man-db 2.4.2:
 	  plain text without the use of backspace or ANSI formatting
 	  characters.
 
+	o When invoking apropos (man -k) or whatis (man -f) as external
+	  programs, man now only passes through command-line options
+	  understood by the respective programs.
+
 	Compatibility notes:
 	--------------------
 
